--- a/src/app/componentes/header/header.component.css
+++ b/src/app/componentes/header/header.component.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: aqua;
+    background-color: rgb(72, 72, 206);
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
@@ -22,4 +22,5 @@ img {
 
 .social i {
     font-size: 1.6rem;
+    color: white;
 }
