--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.divider {
+    height: 4px;
+    width: 250px;
+    background-color: aqua;
+    margin-top: 5px;
+    margin-bottom: 35px;
+}
