--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-perfil></app-perfil>
 <app-acerca-de></app-acerca-de>
+<app-estudios></app-estudios>
 <app-experiencia></app-experiencia>
