agregado de estilo a skill

--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -4,19 +4,15 @@
 </div>
 <div class="progreso">
     <div class="html">
-    <circle-progress [percent]="85"></circle-progress>
-    <p>HTML</p>
+    <circle-progress [percent]="85" [subtitle]="'HTML'" [subtitleFontSize]="'1.5em'"></circle-progress>
     </div>
     <div class="css">
-    <circle-progress [percent]="80"></circle-progress>
-    <p>CSS</p>
+    <circle-progress [percent]="80" [subtitle]="'CSS'" [subtitleFontSize]="'1.5em'"></circle-progress>
     </div>
     <div class="java">
-    <circle-progress [percent]="85"></circle-progress>
-    <p>JAVA</p>
+    <circle-progress [percent]="70" [subtitle]="'JAVA'" [subtitleFontSize]="'1.5em'"></circle-progress>
     </div>
     <div class="angular">
-    <circle-progress [percent]="75"></circle-progress>
-    <p>ANGULAR</p>
+    <circle-progress [percent]="75" [subtitle]="'ANGULAR'" [subtitleFontSize]="'1.5em'"></circle-progress>
     </div>
 </div>
