creacion del boton iniciar sesion

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -8,4 +8,7 @@
             <a href="https://www.linkedin.com/in/joseabarreto/"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/chichobarreto/"><i class="fab fa-instagram"></i></a>
     </div>
+    <div class="button">
+        <input class="btn btn-primary" type="button" value="Iniciar Sesión">
+    </div>
 </div>
