--- a/src/app/componentes/header/header.component.css
+++ b/src/app/componentes/header/header.component.css
@@ -1,7 +1,8 @@
 .header {
     background-color: rgb(72, 72, 206);
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
 }
 
 img {
@@ -11,7 +12,7 @@ img {
 
 .social{
     margin-top: 22px;
-    margin-left: 350px;
+    margin-left: 800px;
 }
 
 .social a{
@@ -23,4 +24,10 @@ img {
 .social i {
     font-size: 1.6rem;
     color: white;
+}
+
+.button {
+    padding-right: 20px;
+    margin-top: 15px;
+    color:black;
 }
