--- a/src/app/componentes/perfil/perfil.component.html
+++ b/src/app/componentes/perfil/perfil.component.html
@@ -4,7 +4,7 @@
     </div>    
     <main class="Perfil">
         <div class="info-content">
-            <h1>Soy <span>José Barreto</span> </h1>
+            <h1>Soy <span>{{persona.nombre}} {{persona.apellido}}</span> </h1>
             <p>Tengo 32 años y soy de Córdoba capital, Argentina.</p>
             <a download href="#"><button class="download-cv">Descargar CV</button></a>
         </div>
