Creacion de componente login y ruteo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<app-header></app-header>
-<app-perfil></app-perfil>
-<app-acerca-de></app-acerca-de>
-<app-estudios></app-estudios>
-<app-experiencia></app-experiencia>
-<app-skills></app-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
