--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -9,6 +9,6 @@
             <a href="https://www.instagram.com/chichobarreto/"><i class="fab fa-instagram"></i></a>
     </div>
     <div class="button">
-        <input class="btn btn-primary" type="button" value="Iniciar Sesión">
+        <input class="btn btn-primary" type="button" value="Iniciar Sesión" (click)="login()">
     </div>
 </div>
