--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,22 +1,24 @@
 <div class="experiencia">
     <div class="experiencia-cuerpo">
         <h2>Experiencia</h2>
+        <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">Nueva Experiencia</button>
         <div class="divider"></div>
     </div>
-    <div class="container">
+    <div class="container" *ngFor="let Experiencia of expe">
         <ul class="item-list">
             <li class="cards">
                 <div class="card">
                     <div class="card1_img">
                     </div>
                     <div class="card__titulo">
-                        <h3>Titulo</h3>
+                        <h3>{{Experiencia.nombreE}}</h3>
                         <br>
-                        <p>Descripcion</p>
+                        <p>{{Experiencia.descripcionE}}</p>
                         <p>desde-hasta</p>
                     </div>
-                    <div class="experiencia__links">
-                        <a href="#"><i class="fas fa-globe"></i></a>
+                    <div class="experiencia__links" *ngIf="isLogged">
+                        <button class="btn btn-secondary" routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil"></i></button>
+                        <button class="btn btn-secondary" (click)="delete(Experiencia.id)"><i class="bi bi-x"></i></button>
                     </div>
                 </div>
             </li>
