--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,6 +1,6 @@
 <div class="proyectos">
     <div class="proyectos-cuerpo">
-        <h2>Experiencia</h2>
+        <h2>Proyectos</h2>
         <div class="divider"></div>
     </div>
     <div class="container">
